test/commands/scan/wildcard/out.txt
Loading policies ...
Loading payload ...
Pre processing ...
Running ( evaluating 1 resource against 1 policy ) ...
- FAILED (POLICY=required-s3-tags, RULE=require-team-tag, ID=bucket1)
 -> (CHECK=spec.rules[0].assert.all[0])
  -> Invalid value: true: Expected value: false (PATH=tags.(wildcard('?*', Team)))
Done
