test/commands/scan/wildcard/policy.yaml
apiVersion: json.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: required-s3-tags
spec:
  rules:
    - name: require-team-tag
      identifier: "name"
      match:
        any:
        - type: aws_s3_bucket
      exclude:
        any:
        - (wildcard('bypass-*', name)): true
      assert:
        all:
        - check:
            tags:
              (wildcard('?*', Team)): false
